src/components/CardsGenerated/card.css
.pair-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: #282c34;
  margin: 1rem;
  padding: 1rem;
  width: 300px;
  border: 2px solid #ffffff;
  border-radius: 10px;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

.pair-1 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 1rem;
}

.englishText {
  color: #ffffff;
  font-size: 22px;
  font-weight: bold;
  text-align: center;
  margin: 0.8rem 0;
}

.pinyinText {
  color: #ffffff;
  font-size: 24px;
  font-weight: bold;
  text-align: center;
  margin: 2rem 0 1rem 0;
}

p {
  color: #ffffff;
  font-size: 18px;
  font-weight: bold;
  text-align: center;
  margin: 0.5rem 0;
}

button {
  display: inline-block;
  padding: 12px 24px;
  font-size: 16px;
  border: none;
  border-radius: 50px;
  background-color: #b6a181;
  color: white;
  text-align: center;
  text-decoration: none;
  margin: 4px 2px;
  cursor: pointer;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
  transition: background-color 0.3s ease, box-shadow 0.3s ease,
    transform 0.2s ease;
}

button:hover {
  background-color: #958162;
  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
  transform: translateY(-2px);
}

button:active {
  background-color: #945231;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
  transform: translateY(1px);
}

